Add sql-runner module
Signed-off-by: Gantigmaa Selenge <tina.selenge@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,17 @@
 
     <!-- Maven plugin versions -->
     <maven.compiler.version>3.10.1</maven.compiler.version>
+
+    <!-- Project dependency version -->
+    <flink.version>1.19.0</flink.version>
+    <kafka.version>3.7.0</kafka.version>
+    <slf4j.version>1.7.36</slf4j.version>
+    <fabric8.kubernetes-client.version>6.13.0</fabric8.kubernetes-client.version>
+    <flink.kafka.connector.version>3.2.0-1.19</flink.kafka.connector.version>
   </properties>
 
   <modules>
+      <module>flink-sql-runner</module>
   </modules>
 
   <build>
