--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+### IntelliJ IDEA ###
+.idea/*
+*.iws
+*.iml
+*.ipr
+
 # Package Files #
 *.jar
 *.war
@@ -22,3 +28,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/flink-sql-runner/target/
