--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <kafka.version>3.7.0</kafka.version>
     <slf4j.version>1.7.36</slf4j.version>
     <fabric8.kubernetes-client.version>6.13.0</fabric8.kubernetes-client.version>
+    <flink.avro.confluent.registry.version>1.19.1</flink.avro.confluent.registry.version>
     <flink.kafka.connector.version>3.2.0-1.19</flink.kafka.connector.version>
   </properties>
 
