--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-/flink-sql-runner/target/
+target
+dependency-reduced-pom.xml
