--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -22,13 +22,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -39,7 +32,7 @@ jobs:
       - name: Build with Maven
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: mvn -B clean verify -Pci
+        run: mvn -B clean verify
 
       - name: Login to Quay
         uses: docker/login-action@v3
@@ -55,6 +48,7 @@ jobs:
           context: flink-sql-runner/
           platforms: linux/amd64,linux/arm64
           push: false
+          file: flink-sql-runner/Dockerfile
 
       - name: Build and Push Image
         if: github.event_name == 'push' && github.ref_name == 'main'
