--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
     <fabric8.kubernetes-client.version>6.13.0</fabric8.kubernetes-client.version>
     <flink.avro.confluent.registry.version>1.19.1</flink.avro.confluent.registry.version>
     <flink.kafka.connector.version>3.2.0-1.19</flink.kafka.connector.version>
+
+    <!-- Test only dependencies -->
+    <mockito.version>5.12.0</mockito.version>
+    <jupiter.version>5.10.3</jupiter.version>
   </properties>
 
   <modules>
