--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
     <!-- Test only dependencies -->
     <mockito.version>5.12.0</mockito.version>
     <jupiter.version>5.10.3</jupiter.version>
+    <!-- Sonar settings -->
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.organization>streamshub</sonar.organization>
   </properties>
 
   <modules>
