Install distribution into docker image
1. creates the image from scratch based on RHEL, following the upstream Dockerfile and
using the same entrypoint script as upstream for compatibility with flink operator
2. gosu is not installed as we set a user, the upstream codepath avoids gosu
   in this case
3. changes the location of the job jar to /opt/streamshub/flink-sql-runner.jar
4. installs streamshub/lib connectors and formats from the distribution
   into /opt/flink/lib so they are available on the classpath
5. sets USER to flink

Co-authored-by: Gantigmaa Selenge <tina.selenge@gmail.com>
Signed-off-by: Robert Young <robeyoun@redhat.com>

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -46,19 +46,19 @@ jobs:
         if: github.ref_name != 'main'
         uses: docker/build-push-action@v6
         with:
-          context: flink-sql-runner/
+          context: .
           platforms: linux/amd64,linux/arm64
           push: false
-          file: flink-sql-runner/Dockerfile
+          file: Dockerfile
 
       - name: Build and Push Image
         if: github.event_name == 'push' && github.ref_name == 'main'
         uses: docker/build-push-action@v6
         with:
-          context: flink-sql-runner/
+          context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          file: flink-sql-runner/Dockerfile
+          file: Dockerfile
           tags: ${{ secrets.IMAGE_REPO_HOSTNAME }}/${{ secrets.IMAGE_REPO_NAMESPACE }}/flink-sql-runner:latest
 
       ## Save the context information for use in Sonar analysis
