Change packaging type to avoid unnecessary build steps
Signed-off-by: Katherine Stanley <11195226+katheris@users.noreply.github.com>

--- a/flink-sql-runner-dist/pom.xml
+++ b/flink-sql-runner-dist/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>flink-sql-runner-dist</artifactId>
+    <packaging>pom</packaging>
 
     <properties>
         <flink.download.url>
