Fix the parsing issue with sasl.jaas.config

--- a/examples/FlinkDeployment.yaml
+++ b/examples/FlinkDeployment.yaml
@@ -19,6 +19,7 @@ spec:
       cpu: 1
   job:
     jarURI: local:///opt/streamshub/flink-sql-runner.jar
-    args: ["<SQL_STATEMENTS>"]
+    #Replace the value for "args" with your own SQL statements
+    args: ["CREATE TABLE orders (order_number BIGINT, price DECIMAL(32,2), buyer ROW<first_name STRING, last_name STRING>, last_name STRING, order_time TIMESTAMP(3)) WITH ('connector' = 'datagen'); CREATE TABLE print_table WITH ('connector' = 'print') LIKE orders; INSERT INTO print_table SELECT * FROM orders;"]
     parallelism: 1
     upgradeMode: stateless
