--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <flink.version>1.19.1</flink.version>
     <kafka.version>3.7.0</kafka.version>
     <slf4j.version>2.0.16</slf4j.version>
+    <log4j.version>2.24.1</log4j.version>
     <fabric8.kubernetes-client.version>6.13.4</fabric8.kubernetes-client.version>
     <flink.avro.confluent.registry.version>1.19.1</flink.avro.confluent.registry.version>
     <flink.kafka.connector.version>3.2.0-1.19</flink.kafka.connector.version>
