Add the maven surefire plugin so that tests run properly for coverage report
Signed-off-by: Thomas Cooper <code@tomcooper.dev>

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -76,6 +76,7 @@ jobs:
           name: target
           path: |
             **/target/
-            !**/target/*.jar
+            !flink-sql-runner-dist/**
+            !**/target/**.jar
             !**/target/failsafe-reports/**/*
             !**/target/surefire-reports/**/*
