--- a/.packit.yaml
+++ b/.packit.yaml
@@ -1,6 +1,6 @@
 # Default packit instance is a prod and only this is used
 # stg instance is present for testing new packit features in forked repositories where stg is installed.
-packit_instances: ["prod", "stg"]
+packit_instances: [ "prod", "stg" ]
 upstream_project_url: https://github.com/streamshub/flink-sql
 issue_repository: https://github.com/streamshub/flink-sql
 jobs:
@@ -17,11 +17,10 @@ jobs:
     # We don't need to build any packages for Fedora/RHEL/CentOS, it is not related to streams-e2e tests
     skip_build: true
     manual_trigger: true
-    env: {
+    env:
       IP_FAMILY: ipv4,
       TEST_REPO_URL: https://github.com/streamshub/streams-e2e.git,
       TEST_REPO_BRANCH: main
-    }
     labels:
       - flink-sql-example
     tf_extra_params:
@@ -37,11 +36,10 @@ jobs:
       - centos-stream-9-x86_64
     skip_build: true
     manual_trigger: true
-    env: {
+    env:
       IP_FAMILY: ipv4,
       TEST_REPO_URL: https://github.com/streamshub/streams-e2e.git,
       TEST_REPO_BRANCH: main
-    }
     labels:
       - flink-all
     tf_extra_params:
@@ -57,11 +55,10 @@ jobs:
       - centos-stream-9-x86_64
     skip_build: true
     manual_trigger: true
-    env: {
+    env:
       IP_FAMILY: ipv4,
       TEST_REPO_URL: https://github.com/streamshub/streams-e2e.git,
       TEST_REPO_BRANCH: main
-    }
     labels:
       - smoke
     tf_extra_params:
@@ -76,11 +73,10 @@ jobs:
     targets:
       - centos-stream-9-x86_64
     skip_build: true
-    env: {
+    env:
       IP_FAMILY: ipv4,
       TEST_REPO_URL: https://github.com/streamshub/streams-e2e.git,
       TEST_REPO_BRANCH: main
-    }
     tf_extra_params:
       test:
         tmt:
