--- a/flink-sql-runner/pom.xml
+++ b/flink-sql-runner/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.streamshub</groupId>
         <artifactId>flink-sql</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>flink-sql-runner</artifactId>
