Add Git metadata to image tags in GH-Actions
Signed-off-by: Thomas Cooper <code@tomcooper.dev>

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -42,7 +42,15 @@ jobs:
           username: "${{ secrets.IMAGE_REPO_USERNAME }}"
           password: "${{ secrets.IMAGE_REPO_PASSWORD }}"
 
-      - name: Build Image
+      - name: Image metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ secrets.IMAGE_REPO_NAMESPACE }}/flink-sql-runner
+            ${{ secrets.IMAGE_REPO_HOSTNAME }}/${{ secrets.IMAGE_REPO_NAMESPACE }}/flink-sql-runner
+
+      - name: Test Image Build
         if: github.ref_name != 'main'
         uses: docker/build-push-action@v6
         with:
@@ -59,7 +67,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           file: Dockerfile
-          tags: ${{ secrets.IMAGE_REPO_HOSTNAME }}/${{ secrets.IMAGE_REPO_NAMESPACE }}/flink-sql-runner:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       ## Save the context information for use in Sonar analysis
       - name: Save Build Context
