Add release workflow
This adds a workflow that can create a PR transitioning a branch from
in development to release, or vice versa. A releaser:

1. executes the manual action to create a PR updating the maven versions
2. merges this PR after CI runes
3. manually tags and pushes up the release tag, triggering creation of a
   tagged image
4. executes the transition action to create a PR updating the branch for
   development
5. merges this PR

Images will be created on every push to main and branches named
`release/**`. The image will be tagged with the branch name.

Images will be created when any tag starting with `v` is pushed. The
image will be tagged with the git tag.

Nothing is tagged as latest currently.

Signed-off-by: Robert Young <robeyoun@redhat.com>

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -2,7 +2,8 @@ name: Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "releases/**" ]
+    tags: [ "v*" ]
   pull_request:
     types: [ opened, synchronize, reopened ]
 
@@ -35,7 +36,7 @@ jobs:
         run: mvn -B clean verify -Pcoverage
 
       - name: Test Image Build
-        if: github.ref_name != 'main'
+        if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -44,7 +45,7 @@ jobs:
           file: Dockerfile
 
       - name: Login to Quay
-        if: github.event_name == 'push' && github.ref_name == 'main'
+        if: github.event_name == 'push'
         uses: docker/login-action@v3
         with:
           registry: "${{ secrets.IMAGE_REPO_HOSTNAME }}"
@@ -52,15 +53,22 @@ jobs:
           password: "${{ secrets.IMAGE_REPO_PASSWORD }}"
 
       - name: Image metadata
-        if: github.event_name == 'push' && github.ref_name == 'main'
+        if: github.event_name == 'push'
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            quay.io/streamshub/flink-sql-runner
+            ${{ secrets.IMAGE_REPO_HOSTNAME }}/${{ secrets.IMAGE_REPO_NAMESPACE }}/flink-sql-runner
+          tags: |
+            type=ref,event=branch
+            type=ref,event=tag
+          flavor: |
+            latest=false
+            prefix=
+            suffix=
 
       - name: Build and Push Image
-        if: github.event_name == 'push' && github.ref_name == 'main'
+        if: github.event_name == 'push'
         uses: docker/build-push-action@v6
         with:
           context: .
