--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -2,8 +2,8 @@ name: Build
 
 on:
   push:
-    branches: [ "main", "releases/**" ]
-    tags: [ "v*" ]
+    branches: [ "main", "releases-**" ]
+    tags: [ "[0-9]+.[0-9]+.[0-9]+" ]
   pull_request:
     types: [ opened, synchronize, reopened ]
 
