--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.github.streamshub</groupId>
   <artifactId>flink-sql</artifactId>
-  <version>0.1.1-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -14,24 +14,23 @@
     <maven.compiler.release>17</maven.compiler.release>
 
     <!-- Maven plugin versions -->
-    <maven.compiler.version>3.13.0</maven.compiler.version>
+    <maven.compiler.version>3.14.0</maven.compiler.version>
     <maven.assembly.version>3.7.1</maven.assembly.version>
-    <maven.download.version>2.0.0</maven.download.version>
-    <maven.surefire.version>3.5.2</maven.surefire.version>
-    <jacoco.version>0.8.12</jacoco.version>
+    <download.maven.version>2.0.0</download.maven.version>
+    <maven.surefire.version>3.5.3</maven.surefire.version>
+    <jacoco.version>0.8.13</jacoco.version>
 
     <!-- Project dependency version -->
-    <flink.version>1.20.1</flink.version>
-    <kafka.version>3.9.0</kafka.version>
-    <slf4j.version>2.0.16</slf4j.version>
+    <flink.version>2.0.0</flink.version>
+    <slf4j.version>2.0.17</slf4j.version>
     <log4j.version>2.24.3</log4j.version>
     <fabric8.kubernetes-client.version>6.13.5</fabric8.kubernetes-client.version>
-    <flink.avro.confluent.registry.version>1.20.0</flink.avro.confluent.registry.version>
-    <flink.kafka.connector.version>3.4.0-1.20</flink.kafka.connector.version>
+    <flink.avro.confluent.registry.version>2.0.0</flink.avro.confluent.registry.version>
+    <flink.kafka.connector.version>4.0.0-2.0</flink.kafka.connector.version>
 
     <!-- Test only dependencies -->
-    <mockito.version>5.15.2</mockito.version>
-    <jupiter.version>5.11.4</jupiter.version>
+    <mockito.version>5.17.0</mockito.version>
+    <jupiter.version>5.12.2</jupiter.version>
     <!-- Sonar settings -->
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.organization>streamshub</sonar.organization>
@@ -51,9 +50,9 @@
           <version>${maven.compiler.version}</version>
         </plugin>
         <plugin>
-          <groupId>com.googlecode.maven-download-plugin</groupId>
+          <groupId>io.github.download-maven-plugin</groupId>
           <artifactId>download-maven-plugin</artifactId>
-          <version>${maven.download.version}</version>
+          <version>${download.maven.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
