--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
     <!-- Test only dependencies -->
     <mockito.version>5.18.0</mockito.version>
     <jupiter.version>5.13.3</jupiter.version>
+
+    <!-- Test properties -->
+    <sql.test.statement>CREATE TABLE from_pom (id INT);</sql.test.statement>
+
     <!-- Sonar settings -->
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.organization>streamshub</sonar.organization>
@@ -67,7 +71,7 @@
           <version>${maven.surefire.version}</version>
           <configuration>
             <environmentVariables>
-              <SQL_STATEMENTS>CREATE TABLE from_pom (id INT);</SQL_STATEMENTS>
+              <SQL_STATEMENTS>${sql.test.statement}</SQL_STATEMENTS>
             </environmentVariables>
           </configuration>
         </plugin>
