--- a/flink-sql-runner/pom.xml
+++ b/flink-sql-runner/pom.xml
@@ -107,7 +107,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>properties-maven-plugin</artifactId>
-                <version>1.2.1</version>
+                <version>${maven.properties.plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>generate-test-resources</phase>
