move prometheus files, change to use env vars, and update prometheus version

--- a/examples/metrics/prometheus-install/kubernetes_monitor_example/prometheus-config.yaml
+++ b/examples/metrics/prometheus-install/kubernetes_monitor_example/prometheus-config.yaml
@@ -10,4 +10,4 @@ data:
     scrape_configs:
       - job_name: 'flink'
         static_configs:
-          - targets: ['OPERATOR:9249', 'JOB_MANAGER:9249', 'TASK_MANAGER:9249']
+          - targets: ['$OPERATOR_POD_IP:9249', '$JOB_MANAGER_POD_IP:9249', '$TASK_MANAGER_POD_IP:9249']
