--- a/examples/metrics/grafana-install/kubernetes_grafana_example/grafana-datasources.yaml
+++ b/examples/metrics/grafana-install/kubernetes_grafana_example/grafana-datasources.yaml
@@ -3,10 +3,12 @@ kind: ConfigMap
 metadata:
   name: grafana-datasources
 data:
-  datasource.yml: |
+  datasources.yaml: |
+    apiVersion: 1
     datasources:
       - name: Prometheus
         type: prometheus
         access: proxy
         isDefault: true
         url: http://prometheus-service:9090
+        editable: true
