--- a/examples/metrics/prometheus-install/kubernetes/prometheus-service.yaml
+++ b/examples/metrics/prometheus-install/kubernetes/prometheus-service.yaml
@@ -7,4 +7,4 @@ spec:
     - port: 9090
       targetPort: 9090
   selector:
-    app: prometheus-server
+    app.kubernetes.io/instance: prometheus-server
