Fix dashboard title

--- a/examples/metrics/grafana-install/grafana-flink-dashboard.yaml
+++ b/examples/metrics/grafana-install/grafana-flink-dashboard.yaml
@@ -1100,7 +1100,7 @@ data:
       },
       "timepicker": {},
       "timezone": "",
-      "title": "Flink Dashboard Copy",
+      "title": "Flink Dashboard",
       "uid": "7e9286bc-b656-4a16-8c6b-845d75f312cc",
       "version": 1,
       "weekStart": ""
