--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
   </properties>
 
   <modules>
+      <module>shaded-strimzi-kafka-oauth-client</module>
       <module>flink-sql-runner</module>
       <module>flink-sql-runner-dist</module>
   </modules>
