--- a/shaded-strimzi-kafka-oauth-client/pom.xml
+++ b/shaded-strimzi-kafka-oauth-client/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>io.strimzi</groupId>
             <artifactId>kafka-oauth-client</artifactId>
-            <version>0.16.2</version>
+            <version>${strimzi.kafka-oauth-client.version}</version>
         </dependency>
 
     </dependencies>
